--- a/src/index.css
+++ b/src/index.css
@@ -54,13 +54,15 @@ body {
 .crt-screen::before {
   content: " ";
   display: block;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
+  width: 100vw;
+  height: 100vh;
   background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.15) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.03), rgba(0, 255, 0, 0.01), rgba(0, 0, 255, 0.03));
-  z-index: 2;
+  z-index: 9999;
   background-size: 100% 2px, 3px 100%;
   pointer-events: none;
   opacity: 0.5;
